GNOME Bugzilla – Bug 746347
dashdemux: set default @startNumber and also avoid wrong overwrite
Last modified: 2015-03-24 19:56:42 UTC
It's related to commit[793b4bca93530a5e30b5ba8ea02983cbd11532db]. This commit fixed the default @startNumber to 1 as spec requires. However, it will overwrite "parent"'s @startNumber. Consider this scenario: AdaptationSet has SegmentTemplate with @startNumber to 0, and Representation has SegmentTemplate with @startNumber missing. The @startNumber of the Representation should be inherited from AdaptationSet. But that git commit will set it to 1, overwriting an inherited value.
Created attachment 299600 [details] [review] set default startNumber and also avoid wrong overwrite a candidate patch is attached. It will set default @startNumber to 1, if @startNumber is missing at all level. Also, it will avoid incorrect overwriting inherited value.
Comment on attachment 299600 [details] [review] set default startNumber and also avoid wrong overwrite >From: xixi <xixi10111011@gmail.com> Is this ("xixi") your full name? If not, could you please use git commit --amend --author='...' and put your full name there? (and then also run git config --global user.name "..." so it's set properly in future, thanks)
Review of attachment 299600 [details] [review]: Looks good. Could you provide a new patch with your full name so it is properly documented in git?
Created attachment 299603 [details] [review] patch_with_full_name patch with full name replaced
@Tim-Philipp Müller @Thiago Sousa Santos Thanks for your review and advice, and I've added a new patch with full name.
commit 9e6198d9efc29a7f5f541a71a87a6187f4828e3b Author: Jun Xie <xixi10111011@gmail.com> Date: Tue Mar 17 21:49:40 2015 +0800 dashdemux: set default @startNumber and also avoid wrong overwrite Set default @startNumber to 1, if @startNumber is missing at all level. Also avoid incorrect overwriting inherited value. https://bugzilla.gnome.org/show_bug.cgi?id=746347